:books: Document requirement to use java.xml.bind module on JVM v9 and up